# e-com-explorer

./: README.md  pyproject.toml
data/: WB - example - 01092023 - 30092023.xlsx  WB - пылесос для мебели - 01082023 - 31082023.xlsx  WB - пылесос для мебели - 01102023 - 30102023.xlsx
docs/: analysis.ipynb
src/ecom_explorer/: app.py  data_ops.py  layout.py  run.py
src/ecom_explorer/components/: brands.py  decorators.py  main_chart.py  sellers.py  top_items.py
src/vacclean_reports/: app.py  data_ops.py  layout.py  run.py
src/vacclean_reports/components/: brands.py  decorators.py  main_chart.py  sellers.py  toggle.py  top_items.py
