[project]
name = "vacclean-reports"
version = "0.0.1"
description = ""
authors = [
    {name = "mayushii21", email = "122178787+mayushii21@users.noreply.github.com"},
]
dependencies = [
    "ipykernel>=6.26.0",
    "pandas>=2.1.2",
    "openpyxl>=3.1.2",
    "dash>=2.14.1",
    "dash-bootstrap-components>=1.5.0",
    "dash-bootstrap-templates>=1.1.1",
    "nbformat>=5.9.2",
    "seaborn>=0.13.0",
    "dash-daq>=0.5.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
vacrep = 'vacclean_reports.run:main'